# py_watson_cloud_publisher

python/: requirements.txt  setup.cfg  setup.py  test-requirements.txt
python/manual_testing/: tt.py
python/py_watson_cloud_publisher/: publish.py
python/py_watson_cloud_publisher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
