[metadata]
name = py_watson_cloud_publisher
author = Christopher Dye
author-email = dyec@us.ibm.com
summary = Publishing library for arbitrary JSON data to both or one of IBM Watson Cloud WIoTP MQTT service, IBM Cloudant
home-page = https://github.com/open-horizon/example/...
description-file = README
license = Apache License 2.0
requires-python = 3.5
version = 0.1.0
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Operating System :: POSIX :: Linux
keywords =
    setup
    distutils
[files]
packages =
    py_watson_cloud_publisher
[pbr]
warnerrors = True
[wheel]
universal = 1
